Correct default HA mode
Change-Id: I5d31eecfdebc54886f627a945ab2f84f20941776

--- a/aws/cloudformation/fwb-ha-work-use-exist-vpc.template
+++ b/aws/cloudformation/fwb-ha-work-use-exist-vpc.template
@@ -95,10 +95,9 @@
         },
         "FortiWebHAMode": {
             "Type": "String",
-            "Default": "active-active-standard",
+            "Default": "active-active-high-volume",
             "AllowedValues": [
                 "active-active-high-volume",
-                "active-active-standard",
                 "active-passive"
             ],
             "ConstraintDescription": "must chose a HA mode.",
