*Branch: main *Developer: lip <lip@fortinet.com> *Problem Description: add gcp *Problem Solution: add gcp to workflow *Local Build Status: success *BUGID: 0438611
Change-Id: I22de10738f6aa325a2408d141281bedce27838fd

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -26,6 +26,9 @@ jobs:
           cp ../azure/templates/deploy_fwb_ha.json ./
           zip fortiweb-ha-azure-quickstart.zip ./deploy_fwb_ha.json
           mv fortiweb-ha-azure-quickstart.zip ../dist/
+          cd ../gcp
+          zip -r fortiweb-ha-gcp-terraform.zip ./
+          mv fortiweb-ha-gcp-terraform.zip ../dist/
           cd ../
           rm -r ./tmp/
       - name: upload-ha-zip
