Add FortiFlex support for AWS HA
Change-Id: Ib1ceed21d28e62c34f824cd92bef91608346e62c

--- a/aws/cloudformation/fwb-ha-work-use-exist-vpc.template
+++ b/aws/cloudformation/fwb-ha-work-use-exist-vpc.template
@@ -61,6 +61,12 @@
                 "OnDemand"
             ]
         },
+		"FortiWebFortiFlex" : {
+			"Type": "String",
+            "AllowedPattern": "[A-Za-z0-9]+",
+            "ConstraintDescription": "must only contain uppercase and lowercase letters and numbers.",
+			"Description": "FortiFlex license file token."
+		},
         "FortiWebInstanceType": {
             "Type": "String",
             "Default": "c5.large",
@@ -407,6 +413,9 @@
                     "FortiWebInstanceType": {
                         "Ref": "FortiWebInstanceType"
                     },
+					"FortiWebFortiFlex": {
+						"Ref": "FortiWebFortiFlex"
+					},
                     "FortiWebLatestAmiId":{
                         "Fn::If":[
                             "IfImageTypeIsBYOL",
@@ -789,6 +798,7 @@
                     },
                     "Parameters": [
                         "FortiWebImageType",
+						"FortiWebFortiFlex",
                         "FortiWebImageVersion",
                         "FortiWebInstanceType",
                         "FortiWebInstancesCount",
@@ -837,6 +847,9 @@
                 "FortiWebImageType": {
                     "default": "FortiWeb Image Type"
                 },
+				"FortiWebFortiFlex" : {
+					"default": "FortiFlex license file token"
+				},
                 "FortiWebImageVersion": {
                     "default": "FortiWeb Image Version"
                 },
