add AWS HA peer FortiFlex
Change-Id: I0839406f4be3ae7a52c5629800f95355c00c11fc

--- a/aws/cloudformation/fwb-ha-work-use-exist-vpc.template
+++ b/aws/cloudformation/fwb-ha-work-use-exist-vpc.template
@@ -61,11 +61,17 @@
                 "OnDemand"
             ]
         },
-		"FortiWebFortiFlex" : {
+		"FortiWebFortiFlex1" : {
 			"Type": "String",
             "AllowedPattern": "[A-Za-z0-9]+",
             "ConstraintDescription": "must only contain uppercase and lowercase letters and numbers.",
-			"Description": "FortiFlex license file token."
+			"Description": "FortiFlex license file token (BYOL only)."
+		},
+		"FortiWebFortiFlex2" : {
+			"Type": "String",
+            "AllowedPattern": "[A-Za-z0-9]+",
+            "ConstraintDescription": "must only contain uppercase and lowercase letters and numbers.",
+			"Description": "FortiFlex license file token (BYOL only)."
 		},
         "FortiWebInstanceType": {
             "Type": "String",
@@ -413,8 +419,11 @@
                     "FortiWebInstanceType": {
                         "Ref": "FortiWebInstanceType"
                     },
-					"FortiWebFortiFlex": {
-						"Ref": "FortiWebFortiFlex"
+					"FortiWebFortiFlex1": {
+						"Ref": "FortiWebFortiFlex1"
+					},
+					"FortiWebFortiFlex2": {
+						"Ref": "FortiWebFortiFlex2"
 					},
                     "FortiWebLatestAmiId":{
                         "Fn::If":[
@@ -798,7 +807,8 @@
                     },
                     "Parameters": [
                         "FortiWebImageType",
-						"FortiWebFortiFlex",
+						"FortiWebFortiFlex1",
+						"FortiWebFortiFlex2",
                         "FortiWebImageVersion",
                         "FortiWebInstanceType",
                         "FortiWebInstancesCount",
@@ -847,7 +857,10 @@
                 "FortiWebImageType": {
                     "default": "FortiWeb Image Type"
                 },
-				"FortiWebFortiFlex" : {
+				"FortiWebFortiFlex1" : {
+					"default": "FortiFlex license file token"
+				},
+				"FortiWebFortiFlex2" : {
 					"default": "FortiFlex license file token"
 				},
                 "FortiWebImageVersion": {
