--- a/aws/cloudformation/ha-instance-create.template
+++ b/aws/cloudformation/ha-instance-create.template
@@ -13,7 +13,10 @@
         "FortiWebImageType":{
             "Type": "String"
         },
-		"FortiWebFortiFlex": {
+		"FortiWebFortiFlex1": {
+			"Type": "String"
+		},
+		"FortiWebFortiFlex2": {
 			"Type": "String"
 		},
         "FortiWebInstancesCount":{
@@ -86,8 +89,11 @@
                 "FortiWebImageType":{
                     "Ref":"FortiWebImageType"
                 },
-				"FortiWebFortiFlex": {
-					"Ref":"FortiWebFortiFlex"
+				"FortiWebFortiFlex1": {
+					"Ref":"FortiWebFortiFlex1"
+				},
+				"FortiWebFortiFlex2": {
+					"Ref":"FortiWebFortiFlex2"
 				},
                 "InstanceType": {
                     "Ref": "FortiWebInstanceType"
