--- a/aws/cloudformation/fwb-ha-work-use-new-vpc.template
+++ b/aws/cloudformation/fwb-ha-work-use-new-vpc.template
@@ -67,17 +67,11 @@
                 "OnDemand"
             ]
         },
-		"FortiWebFortiFlex1" : {
+		"FortiWebFortiFlex" : {
 			"Type": "String",
-            "AllowedPattern": "[A-Za-z0-9]+",
-            "ConstraintDescription": "must only contain uppercase and lowercase letters and numbers.",
-			"Description": "FortiFlex license file token (BYOL only)."
-		},
-		"FortiWebFortiFlex2" : {
-			"Type": "String",
-            "AllowedPattern": "[A-Za-z0-9]+",
-            "ConstraintDescription": "must only contain uppercase and lowercase letters and numbers.",
-			"Description": "FortiFlex license file token (BYOL only)."
+            "AllowedPattern": "[A-Za-z0-9 ]+",
+            "ConstraintDescription": "must only contain uppercase and lowercase letters numbers and space.",
+			"Description": "FortiFlex license file token, separate by space(BYOL ONLY)."
 		},
         "FortiWebInstanceType": {
             "Type": "String",
@@ -510,11 +504,8 @@
                     "FortiWebImageType" : {
                         "Ref":"FortiWebImageType"
                     },
-					"FortiWebFortiFlex1" : {
-						"Ref": "FortiWebFortiFlex1"
-					},
-					"FortiWebFortiFlex2" : {
-						"Ref": "FortiWebFortiFlex2"
+					"FortiWebFortiFlex" : {
+						"Ref": "FortiWebFortiFlex"
 					},
                     "FortiWebInstancesCount":{
                         "Ref": "FortiWebInstancesCount"
@@ -896,8 +887,7 @@
                     },
                     "Parameters": [
                         "FortiWebImageType",
-						"FortiWebFortiFlex1",
-						"FortiWebFortiFlex2",
+						"FortiWebFortiFlex",
                         "FortiWebImageVersion",
                         "FortiWebInstanceType",
                         "FortiWebInstancesCount",
@@ -946,10 +936,7 @@
                 "FortiWebImageType": {
                     "default": "FortiWeb Image Type"
                 },
-				"FortiWebFortiFlex1": {
-					"default": "FortiFlex license file token"
-				},
-				"FortiWebFortiFlex2": {
+				"FortiWebFortiFlex": {
 					"default": "FortiFlex license file token"
 				},
                 "FortiWebImageVersion": {
